<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search_folder"
        android:title="@string/action_search"
        app:showAsAction="always"
        android:icon="@drawable/ic_search"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:title="@string/action_sort"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="101"
        android:title="@string/action_filter"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rename_folder"
        android:orderInCategory="102"
        android:title="@string/action_rename_folder"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_folder"
        android:orderInCategory="103"
        android:title="@string/action_delete_folder"
        app:showAsAction="never" />
</menu>
